force-app/main/default/objects/Orden_de_compra_entrega__c/Orden_de_compra_entrega__c.object-meta.xml
<CustomObject>
    <label>Orden de compra detalle</label>
    <nameField>
        <displayFormat>OCE-{00000000}</displayFormat>
        <label>Nombre de Orde de compra entregas</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orden de compra detalles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>