force-app/main/default/objects/Orden_de_compra_entrega__c/fields/Concepto__c.field-meta.xml
<CustomField>
    <fullName>Concepto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concepto</label>
    <referenceTo>Concepto__c</referenceTo>
    <relationshipName>Orden_de_compra_entregas</relationshipName>
    <type>Lookup</type>
</CustomField>