force-app/main/default/objects/Orden_de_compra_entrega__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente entrega</fullName>
                <default>true</default>
                <label>Pendiente entrega</label>
            </value>
            <value>
                <fullName>Entregado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>