force-app/main/default/objects/Orden_de_compra_entrega__c/fields/Fecha_entrega_prevista__c.field-meta.xml
<CustomField>
    <fullName>Fecha_entrega_prevista__c</fullName>
    <label>Fecha entrega prevista</label>
    <type>Date</type>
</CustomField>