force-app/main/default/objects/Orden_de_compra_entrega__c/fields/Fecha_estimada_ejecucion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_estimada_ejecucion__c</fullName>
    <label>Fecha estimada ejecucion</label>
    <type>Date</type>
</CustomField>