force-app/main/default/objects/Orden_de_compra_entrega__c/fields/Monto_certificado__c.field-meta.xml
<CustomField>
    <fullName>Monto_certificado__c</fullName>
    <label>Monto certificado</label>
    <summarizedField>Certificacion_detalle__c.Valor_actual__c</summarizedField>
    <summaryForeignKey>Certificacion_detalle__c.Orden_de_compra_detalle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>