force-app/main/default/objects/Orden_de_compra_entrega__c/fields/Monto_pendiente_certificar__c.field-meta.xml
<CustomField>
    <fullName>Monto_pendiente_certificar__c</fullName>
    <formula>Subtotal__c -  Monto_certificado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto pendiente certificar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>