force-app/main/default/objects/Orden_de_compra_entrega__c/fields/Orden_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Orden_de_compra__c</fullName>
    <label>Orden de compra</label>
    <referenceTo>Orden_de_compra__c</referenceTo>
    <relationshipName>Orden_de_compra_entregas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>