force-app/main/default/objects/Orden_de_compra_entrega__c/fields/Porcentaje_avance__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_avance__c</fullName>
    <label>Porcentaje avance</label>
    <summarizedField>Certificacion_detalle__c.Porcentaje_avance__c</summarizedField>
    <summaryForeignKey>Certificacion_detalle__c.Orden_de_compra_detalle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>