force-app/main/default/objects/Orden_de_compra_entrega__c/fields/Rubro__c.field-meta.xml
<CustomField>
    <fullName>Rubro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rubro</label>
    <referenceTo>Rubro__c</referenceTo>
    <relationshipName>Orden_de_compra_entregas</relationshipName>
    <type>Lookup</type>
</CustomField>