force-app/main/default/objects/Orden_de_compra_entrega__c/fields/Tasa_impuestos__c.field-meta.xml
<CustomField>
    <fullName>Tasa_impuestos__c</fullName>
    <label>Tasa impuestos</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>