force-app/main/default/objects/Orden_de_compra_entrega__c/fields/Tiene_impuestos__c.field-meta.xml
<CustomField>
    <fullName>Tiene_impuestos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene impuestos?</label>
    <type>Checkbox</type>
</CustomField>