force-app/main/default/objects/Orden_de_compra_entrega__c/fields/Unidad_de_medida__c.field-meta.xml
<CustomField>
    <fullName>Unidad_de_medida__c</fullName>
    <label>Unidad de medida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unidades</fullName>
            </value>
            <value>
                <fullName>Horas</fullName>
            </value>
            <value>
                <fullName>Jornales</fullName>
            </value>
            <value>
                <fullName>m2</fullName>
            </value>
            <value>
                <fullName>m3</fullName>
            </value>
            <value>
                <fullName>Metro lineal</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Cantidad</fullName>
            </value>
            <value>
                <fullName>GL</fullName>
            </value>
            <value>
                <fullName>ML</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>