force-app/main/default/objects/Orden_de_compra_entrega__c/fields/Valor_total__c.field-meta.xml
<CustomField>
    <fullName>Valor_total__c</fullName>
    <formula>Subtotal__c +  Valor_impuestos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>