force-app/main/default/objects/Orden_de_compra_entrega__c/fields/Valor_unitario__c.field-meta.xml
<CustomField>
    <fullName>Valor_unitario__c</fullName>
    <label>Valor unitario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>