force-app/main/default/objects/Orden_de_compra_entrega__c/recordTypes/Cantidades.recordType-meta.xml
<RecordType>
    <fullName>Cantidades</fullName>
    <active>true</active>
    <label>Cantidades</label>
</RecordType>