force-app/main/default/objects/Orden_de_compra_entrega__c/recordTypes/Dinero.recordType-meta.xml
<RecordType>
    <fullName>Dinero</fullName>
    <active>false</active>
    <label>Dinero</label>
</RecordType>